vemo-app/main/default/objects/Reconciliation__c/Reconciliation__c.object-meta.xml
<CustomObject>
    <label>Reconciliation</label>
    <nameField>
        <displayFormat>REC-{00000}</displayFormat>
        <label>Reconciliation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>