vemo-app/main/default/objects/Reconciliation__c/fields/AdobeSignURL__c.field-meta.xml
<CustomField>
    <fullName>AdobeSignURL__c</fullName>
    <label>Adobe Sign URL</label>
    <type>Url</type>
</CustomField>