vemo-app/main/default/objects/Reconciliation__c/fields/AgreementSigned__c.field-meta.xml
<CustomField>
    <fullName>AgreementSigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the associated Adobe Sign Agreement is SIgned, this box should be checked</description>
    <label>Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>