vemo-app/main/default/objects/Reconciliation__c/fields/DateFrom__c.field-meta.xml
<CustomField>
    <fullName>DateFrom__c</fullName>
    <label>DateFrom</label>
    <type>Date</type>
</CustomField>