vemo-app/main/default/objects/Reconciliation__c/fields/DateThrough__c.field-meta.xml
<CustomField>
    <fullName>DateThrough__c</fullName>
    <label>DateThrough</label>
    <type>Date</type>
</CustomField>