vemo-app/main/default/objects/Reconciliation__c/fields/SendKickOffEmail__c.field-meta.xml
<CustomField>
    <fullName>SendKickOffEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Kick-Off Email</label>
    <type>Checkbox</type>
</CustomField>