vemo-app/main/default/objects/Reconciliation__c/fields/SendSubmissionConfirmation__c.field-meta.xml
<CustomField>
    <fullName>SendSubmissionConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Submission Confirmation</label>
    <type>Checkbox</type>
</CustomField>