vemo-app/main/default/objects/Reconciliation__c/fields/ShouldHaveDetail__c.field-meta.xml
<CustomField>
    <fullName>ShouldHaveDetail__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used by the front end to indicate whether or not the student is required to put in detail records for this reconciliation.</description>
    <inlineHelpText>This field is used by the front end to indicate whether or not the student is required to put in detail records for this reconciliation.</inlineHelpText>
    <label>Should Have Detail</label>
    <type>Checkbox</type>
</CustomField>