vemo-app/main/default/objects/Reconciliation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>Documents submitted</fullName>
            </value>
            <value>
                <fullName>Follow-up required</fullName>
            </value>
            <value>
                <fullName>Reconciled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>