vemo-app/main/default/objects/Reconciliation__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reconciliation</relationshipLabel>
    <relationshipName>Reconciliation</relationshipName>
    <type>Lookup</type>
</CustomField>